grid.css
.x-grid-header {
	line-height:15px;
	vertical-align:middle;
	line-height: 2em;
	font-size: 1.2em;
	text-align: center;
	font-weight: bold;
	color: #FFF;
	text-shadow: rgba(0, 0, 0, 0.5) 0 -0.08em 0;
	
	-webkit-column-rule-width: 1px;
	-webkit-column-rule-style: solid;
	-webkit-column-rule-color: black;
	
	height: 2.5em;
	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #9aa7b2), color-stop(2%, #647482), color-stop(100%, #434d57));
}
.x-grid-row {
	-webkit-column-rule-width: 1px;
	-webkit-column-rule-style: solid;
	-webkit-column-rule-color: black;
	
	border-bottom: 1px solid #000;
}
.x-grid-body .x-grid-row:nth-child(odd) {
	background-color: #f0f0f0;
}
.x-grid-row[selected=true] {
	-webkit-transform: translate3d(0, 0, 0);
	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0%, #7fb6e7), color-stop(2%, #2986d6), color-stop(100%, #1d5e96));
	background-image: linear-gradient(top, #7fb6e7 0%, #2986d6 2%, #1d5e96 100%);
	color: #fff;
	border-color: #103656;
	text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
}
.x-grid-cell {
	height: 2.5em;
	
	line-height:15px;
	vertical-align:middle;
	line-height: 2em;
	font-size: 1em;
	font-weight: bold;
}

